--- a/Client/Client/Pages/RecorderPage.xaml
+++ b/Client/Client/Pages/RecorderPage.xaml
@@ -27,6 +27,7 @@
         
         <!-- Commands -->
         <Grid
+            Visibility="Collapsed"
             Background="#FF212121"
             Grid.Row="2"
             Height="50">
