--- a/Client/Client/Pages/ViewerPage.xaml
+++ b/Client/Client/Pages/ViewerPage.xaml
@@ -6,103 +6,57 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:Client.Models"
-    xmlns:controls="using:Client.Controls"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <SplitView DisplayMode="Inline" IsPaneOpen="True">
-            <!--
-                SplitView Pane contains all camera feeds
-                and can be hidden behind a toggle for mobile
-                or compact mode.
-            -->
-            <SplitView.Pane>
-                <Grid Padding="8">
-                    <Grid.Background>
-                        <SolidColorBrush Color="{ThemeResource SystemAccentColor}" />
-                    </Grid.Background>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <TextBlock Margin="16" Style="{StaticResource HeaderTextBlockStyle}">Cameras</TextBlock>
-                    <ListView
-                        x:Name="FeedList" 
-                        Grid.Row="1"
-                        ItemsSource="{x:Bind Path=ViewModel.AvailableFeeds}"
-                        SelectionChanged="FeedList_SelectionChanged">
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="Margin" Value="0 8" />
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                        <ListView.ItemTemplate>
-                            <DataTemplate x:DataType="models:FeedModel">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="12" />
-                                        <ColumnDefinition Width="*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Border Grid.Column="0" Background="GreenYellow" />
-                                    <TextBlock 
-                                        Grid.Column="1"
-                                        Margin="8 0 0 4"
-                                        HorizontalAlignment="Left"
-                                        VerticalAlignment="Bottom"
-                                        FontWeight="SemiBold"
-                                        TextWrapping="NoWrap"
-                                        TextTrimming="CharacterEllipsis"
-                                        FontSize="24"
-                                        Text="{x:Bind Path=Name, Mode=OneWay}" />
-                                    <Viewbox Stretch="Uniform" Grid.Column="1">
-                                        <Image MinWidth="320" MinHeight="180" Source="{x:Bind Path=LastSnapshot.Bitmap, Mode=OneWay}"/>
-                                    </Viewbox>
-                                </Grid>
-                            </DataTemplate>
-                        </ListView.ItemTemplate>
-                    </ListView>
-                </Grid>
-            </SplitView.Pane>
-            <!-- Begin main viewer pane -->
-            <ContentControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Content="{x:Bind Path=ViewModel.SelectedFeed, Mode=OneWay}">
-                <ContentControl.ContentTemplateSelector>
-                    <controls:NullTemplateSelector x:Name="MainViewerTemplateSelector">
-                        <!-- Null Template is shown when a feed has not been selected. -->
-                        <controls:NullTemplateSelector.NullTemplate>
-                            <DataTemplate>
-                                <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Padding="8">
-                                    <TextBlock
-                                        Style="{StaticResource SubheaderTextBlockStyle}"
-                                        HorizontalAlignment="Center"
-                                        VerticalAlignment="Center"
-                                        Text="Please select a feed." />
-                                </Grid>
-                            </DataTemplate>
-                        </controls:NullTemplateSelector.NullTemplate>
-                        <!-- NotNullTemplate is shown when a feed has been selected. -->
-                        <controls:NullTemplateSelector.NotNullTemplate>
-                            <DataTemplate x:DataType="models:FeedModel">
-                                <Grid Padding="8">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="*" />
-                                        <RowDefinition Height="auto" />
-                                        <RowDefinition Height="200" />
-                                    </Grid.RowDefinitions>
-                                    <TextBlock Margin="16" Style="{StaticResource HeaderTextBlockStyle}" Text="{x:Bind Path=Name, Mode=OneWay}" />
-                                    <Viewbox Stretch="Uniform" Grid.Row="1" Grid.Column="0" Margin="0 8 0 0">
-                                        <Image MinWidth="1280" MinHeight="720" Source="{x:Bind Path=LastSnapshot.Bitmap, Mode=OneWay}" />
-                                    </Viewbox>
-                                    <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
-                                        <Button FontFamily="Segoe UI Symbol" FontSize="24">&#57602;</Button>
-                                        <Button FontFamily="Segoe UI Symbol" FontSize="24">&#57605;</Button>
-                                    </StackPanel>
-                                </Grid>
-                            </DataTemplate>
-                        </controls:NullTemplateSelector.NotNullTemplate>
-                    </controls:NullTemplateSelector>
-                </ContentControl.ContentTemplateSelector>
-            </ContentControl>
-        </SplitView>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <TextBlock Margin="16" Style="{StaticResource HeaderTextBlockStyle}">Camera Feeds</TextBlock>
+
+        <ListView
+            x:Name="FeedList" 
+            Grid.Row="1"
+            ItemsSource="{x:Bind Path=ViewModel.MostRecentSnapshots}">
+            <ListView.ItemTemplate>
+                <DataTemplate x:DataType="models:SnapshotModel">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="12" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <Border Grid.Column="0" Background="GreenYellow" />
+                        
+                        <Grid Grid.Column="1">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="35" />
+                            </Grid.RowDefinitions>
+                            <Viewbox 
+                                Grid.Row="0"
+                                MaxWidth="490"
+                                MaxHeight="490"
+                                Stretch="Uniform">
+                                <Image Source="{x:Bind Path=Bitmap, Mode=OneWay}"/>
+                            </Viewbox>
+
+                            <TextBlock 
+                                Grid.Row="1"
+                                Margin="8 0 0 4"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                                FontWeight="SemiBold"
+                                TextWrapping="NoWrap"
+                                TextTrimming="CharacterEllipsis"
+                                FontSize="24"
+                                Text="{x:Bind Path=FeedName, Mode=OneWay}" />
+                        </Grid>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </Page>
