--- a/Client/Client/Pages/RecorderPage.xaml
+++ b/Client/Client/Pages/RecorderPage.xaml
@@ -11,65 +11,74 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="50" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <GridView
-            Grid.Row="0"
-            ItemsSource="{x:Bind Path=ViewModel.Cameras}">
-            <GridView.ItemTemplate>
-                <DataTemplate x:DataType="models:Camera">
-                    <controls:RecordingCamera Camera="{x:Bind}"/>
-                </DataTemplate>
-            </GridView.ItemTemplate>
-        </GridView>
+        <TextBlock Margin="16" Style="{StaticResource HeaderTextBlockStyle}">Your Cameras</TextBlock>
 
-        <!-- Commands -->
-        <Grid
-            Visibility="Collapsed"
-            Background="#FF212121"
-            Grid.Row="2"
-            Height="50">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="50" />
-            </Grid.ColumnDefinitions>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
 
-            <!-- Start/stop all -->
+            <GridView
+                Grid.Row="0"
+                ItemsSource="{x:Bind Path=ViewModel.Cameras}">
+                <GridView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Camera">
+                        <controls:RecordingCamera Camera="{x:Bind}"/>
+                    </DataTemplate>
+                </GridView.ItemTemplate>
+            </GridView>
+
+            <!-- Commands -->
             <Grid
-                Grid.Column="0"
+                Visibility="Collapsed"
+                Background="#FF212121"
+                Grid.Row="2"
                 Height="50">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="50" />
                     <ColumnDefinition />
+                    <ColumnDefinition Width="50" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock
-                    x:Name="StartStopIcon"
-                    FontFamily="Segoe UI Symbol"
-                    FontSize="28"
+                <!-- Start/stop all -->
+                <Grid
                     Grid.Column="0"
-                    Text="&#57602;"
-                    TextAlignment="Center"
-                    VerticalAlignment="Center" />
+                    Height="50">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
 
+                    <TextBlock
+                        x:Name="StartStopIcon"
+                        FontFamily="Segoe UI Symbol"
+                        FontSize="28"
+                        Grid.Column="0"
+                        Text="&#57602;"
+                        TextAlignment="Center"
+                        VerticalAlignment="Center" />
+
+                    <TextBlock
+                        x:Name="StartStopMessage"
+                        FontSize="21"
+                        Grid.Column="1"
+                        Text="Start Monitoring All"
+                        VerticalAlignment="Center" />
+                </Grid>
+
+                <!-- Globe -->
                 <TextBlock
-                    x:Name="StartStopMessage"
-                    FontSize="21"
+                    FontFamily="Segoe UI Symbol"
                     Grid.Column="1"
-                    Text="Start Monitoring All"
+                    HorizontalAlignment="Center"
+                    FontSize="28"
+                    Text="&#57643;"
                     VerticalAlignment="Center" />
             </Grid>
-
-            <!-- Globe -->
-            <TextBlock
-                FontFamily="Segoe UI Symbol"
-                Grid.Column="1"
-                HorizontalAlignment="Center"
-                FontSize="28"
-                Text="&#57643;"
-                VerticalAlignment="Center" />
         </Grid>
     </Grid>
 
