--- a/Client/Client/Pages/MainPage.xaml
+++ b/Client/Client/Pages/MainPage.xaml
@@ -14,12 +14,13 @@
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
-            <RowDefinition Height="35" />
+            <RowDefinition Height="140" />
         </Grid.RowDefinitions>
 
         <Image
             Grid.Row="0"
             Height="128"
+            Margin="0,70,0,0"
             Source="/Assets/Square44x44Logo.scale-200.png"
             Width="128" />
         <Button 
@@ -35,7 +36,8 @@
             Content="About PassiveEyes"
             Foreground="#ffffffff"
             Grid.Row="2"
-            HorizontalAlignment="Center" />
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" />
 
         <WebView
             x:Name="AuthWebView"
